--- a/ContagiousDiseaseManagementSystem/katalon/B5913480/B5913480_sprint#1.html
+++ b/ContagiousDiseaseManagementSystem/katalon/B5913480/B5913480_sprint#1.html
@@ -8,7 +8,7 @@
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">Contagion</td></tr>
+<tr><td rowspan="1" colspan="3">Contagion True</td></tr>
 </thead>
 <tbody>
 <tr><td>open</td><td>http://localhost:8080/contagion<datalist><option>http://localhost:8080/contagion</option></datalist></td><td></td>
@@ -52,6 +52,56 @@
 <tr><td>click</td><td>//div[@id='app']/div/div/div[2]/div[5]/div/button/span<datalist><option>//div[@id='app']/div/div/div[2]/div[5]/div/button/span</option><option>//button/span</option><option>css=span.v-btn__content</option></datalist></td><td></td>
 </tr>
 <tr><td>assertText</td><td>//div[@id='app']/div/div/div[2]/div[6]/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div[6]/div/div/div</option><option>//div[2]/div[6]/div/div/div</option><option>css=div.v-alert__content</option></datalist></td><td>บันทึกข้อมูลสำเร็จ</td>
+</tr>
+</tbody></table>
+<table cellpadding="1" cellspacing="1" border="1">
+<thead>
+<tr><td rowspan="1" colspan="3">Contagion Fail</td></tr>
+</thead>
+<tbody>
+<tr><td>open</td><td>http://localhost:8080/contagion<datalist><option>http://localhost:8080/contagion</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='app']/div/div/div[2]/div/div/div/div/div/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div/div/div/div/div/div/div/div</option><option>//div/div/div[2]/div/div/div/div/div/div/div/div</option><option>css=div.v-select__selections</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>xpath=(//div[@id='list-8']/div/div)[2]<datalist><option>xpath=(//div[@id='list-8']/div/div)[2]</option><option>//div/div/div/div/div/div</option><option>css=div.v-list-item__content</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='app']/div/div/div[2]/div/div/div/div/div/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div/div/div/div/div/div/div/div</option><option>//div/div/div[2]/div/div/div/div/div/div/div/div</option><option>css=div.v-select__selections</option></datalist></td><td>ตาแดง</td>
+</tr>
+<tr><td>click</td><td>//div[@id='app']/div/div/div[2]/div/div/div[2]/div/div/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div/div/div[2]/div/div/div/div/div</option><option>//div[2]/div/div/div[2]/div/div/div/div/div</option><option>css=div.v-input.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.teal--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=กลุ่มเชื้อโรคที่ผ่านทางบาดแผลหรือเยื่อบุผิวหนัง-list-item-95<datalist><option>id=กลุ่มเชื้อโรคที่ผ่านทางบาดแผลหรือเยื่อบุผิวหนัง-list-item-95</option><option>//div[@id='กลุ่มเชื้อโรคที่ผ่านทางบาดแผลหรือเยื่อบุผิวหนัง-list-item-95']</option><option>xpath=(//div[@id='list-16']/div/div/div)[2]</option><option>//div/div/div/div/div/div/div</option><option>css=#กลุ่มเชื้อโรคที่ผ่านทางบาดแผลหรือเยื่อบุผิวหนัง-list-item-95</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='app']/div/div/div[2]/div/div/div[2]/div/div/div/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div/div/div[2]/div/div/div/div/div/div</option><option>//div[2]/div/div/div[2]/div/div/div/div/div/div</option><option>css=div.v-input.v-input--is-label-active.v-input--is-dirty.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.teal--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections &gt; div.v-select__selection.v-select__selection--comma</option></datalist></td><td>กลุ่มเชื้อโรคที่ผ่านทางบาดแผลหรือเยื่อบุผิวหนัง</td>
+</tr>
+<tr><td>click</td><td>id=input-24<datalist><option>id=input-24</option><option>//input[@id='input-24']</option><option>//div[@id='app']/div/div/div[2]/div[2]/div/div/div/div/div/input</option><option>//div[2]/div/div/div/div/div/input</option><option>css=#input-24</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=input-24<datalist><option>id=input-24</option><option>//input[@id='input-24']</option><option>//div[@id='app']/div/div/div[2]/div[2]/div/div/div/div/div/input</option><option>//div[2]/div/div/div/div/div/input</option><option>css=#input-24</option></datalist></td><td>VIRUS</td>
+</tr>
+<tr><td>assertValue</td><td>id=input-24<datalist><option>id=input-24</option><option>//input[@id='input-24']</option><option>//div[@id='app']/div/div/div[2]/div[2]/div/div/div/div/div/input</option><option>//div[2]/div/div/div/div/div/input</option><option>css=#input-24</option></datalist></td><td>VIRUS</td>
+</tr>
+<tr><td>click</td><td>//div[@id='app']/div/div/div[2]/div[3]/div<datalist><option>//div[@id='app']/div/div/div[2]/div[3]/div</option><option>//div[2]/div[3]/div</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='app']/div/div/div[2]/div[3]/div/div/div/div/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div[3]/div/div/div/div/div/div/div</option><option>//div[3]/div/div/div/div/div/div/div</option><option>css=div.v-input.v-input--has-state.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.error--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>xpath=(//div[@id='list-28']/div/div)[2]<datalist><option>xpath=(//div[@id='list-28']/div/div)[2]</option><option>//div/div/div/div/div/div</option><option>css=div.v-list-item__content</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='app']/div/div/div[2]/div[3]/div/div/div/div/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div[3]/div/div/div/div/div/div/div</option><option>//div[3]/div/div/div/div/div/div/div</option><option>css=div.v-input.v-input--is-label-active.v-input--is-dirty.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.teal--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option></datalist></td><td>รุนเเรง</td>
+</tr>
+<tr><td>click</td><td>//div[@id='app']/div/div/div[2]/div[3]/div/div[2]/div/div/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div[3]/div/div[2]/div/div/div/div/div</option><option>//div[3]/div/div[2]/div/div/div/div/div</option><option>css=div.v-input.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.teal--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>xpath=(//div[@id='list-36']/div/div)[2]<datalist><option>xpath=(//div[@id='list-36']/div/div)[2]</option><option>//div/div/div/div/div/div</option><option>css=div.v-list-item__content</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='app']/div/div/div[2]/div[3]/div/div[2]/div/div/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div[3]/div/div[2]/div/div/div/div/div</option><option>//div[3]/div/div[2]/div/div/div/div/div</option><option>css=div.v-input.v-input--is-label-active.v-input--is-dirty.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.teal--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option></datalist></td><td>ติดต่อได้ง่าย</td>
+</tr>
+<tr><td>click</td><td>//div[@id='app']/div/div/div[2]/div[4]/div/div/div/div/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div[4]/div/div/div/div/div/div/div</option><option>//div[4]/div/div/div/div/div/div/div</option><option>css=div.v-input.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.teal--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>xpath=(//div[@id='list-44']/div/div)[2]<datalist><option>xpath=(//div[@id='list-44']/div/div)[2]</option><option>//div/div/div/div/div/div</option><option>css=div.v-list-item__content</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='app']/div/div/div[2]/div[4]/div/div/div/div/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div[4]/div/div/div/div/div/div/div</option><option>//div[4]/div/div/div/div/div/div/div</option><option>css=div.v-input.v-input--is-label-active.v-input--is-dirty.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.teal--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option></datalist></td><td>ให้ยา</td>
+</tr>
+<tr><td>click</td><td>//button[@type='button']<datalist><option>//button[@type='button']</option><option>//div[@id='app']/div/div/div[2]/div[5]/div/button</option><option>//button</option><option>css=button.v-btn.v-btn--contained.theme--light.v-size--default.success</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='app']/div/div/div[2]/div[6]/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div[6]/div/div/div</option><option>//div[2]/div[6]/div/div/div</option><option>css=div.v-alert__content</option></datalist></td><td>บันทึกข้อมูลไม่สำเร็จ</td>
 </tr>
 </tbody></table>
 </body>
