--- a/ContagiousDiseaseManagementSystem/katalon/B5913480/B5913480_sprint#2.html
+++ b/ContagiousDiseaseManagementSystem/katalon/B5913480/B5913480_sprint#2.html
@@ -8,7 +8,7 @@
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">Statistics</td></tr>
+<tr><td rowspan="1" colspan="3">Statistics True</td></tr>
 </thead>
 <tbody>
 <tr><td>open</td><td>http://localhost:8080/statistics<datalist><option>http://localhost:8080/statistics</option></datalist></td><td></td>
@@ -40,6 +40,40 @@
 <tr><td>click</td><td>//div[@id='app']/div/div/div[2]/div[3]/div/button/span<datalist><option>//div[@id='app']/div/div/div[2]/div[3]/div/button/span</option><option>//button/span</option><option>css=span.v-btn__content</option></datalist></td><td></td>
 </tr>
 <tr><td>assertText</td><td>//div[@id='app']/div/div/div[2]/div[4]/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div[4]/div/div</option><option>//div[2]/div[4]/div/div</option><option>css=div.v-alert__wrapper</option></datalist></td><td>บันทึกข้อมูลสำเร็จ</td>
+</tr>
+</tbody></table>
+<table cellpadding="1" cellspacing="1" border="1">
+<thead>
+<tr><td rowspan="1" colspan="3">Contagion Fail</td></tr>
+</thead>
+<tbody>
+<tr><td>open</td><td>http://localhost:8080/statistics<datalist><option>http://localhost:8080/statistics</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='app']/div/div/div[2]/div/div/div/div/div/div/div/div[3]/div/i<datalist><option>//div[@id='app']/div/div/div[2]/div/div/div/div/div/div/div/div[3]/div/i</option><option>//div[3]/div/i</option><option>css=i.v-icon.notranslate.mdi.mdi-menu-down.theme--light.teal--text</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>xpath=(//div[@id='list-8']/div/div)[2]<datalist><option>xpath=(//div[@id='list-8']/div/div)[2]</option><option>//div/div/div/div/div/div</option><option>css=div.v-list-item__content</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='app']/div/div/div[2]/div/div/div[2]/div/div/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div/div/div[2]/div/div/div/div/div</option><option>//div[2]/div/div/div[2]/div/div/div/div/div</option><option>css=div.v-input.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.teal--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>xpath=(//div[@id='list-16']/div/div)[2]<datalist><option>xpath=(//div[@id='list-16']/div/div)[2]</option><option>//div/div/div/div/div/div</option><option>css=div.v-list-item__content</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='app']/div/div/div[2]/div/div/div[2]/div/div/div/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div/div/div[2]/div/div/div/div/div/div</option><option>//div[2]/div/div/div[2]/div/div/div/div/div/div</option><option>css=div.v-input.v-input--is-label-active.v-input--is-dirty.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.teal--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections &gt; div.v-select__selection.v-select__selection--comma</option></datalist></td><td>กลุ่มเชื้อโรคที่ผ่านทางบาดแผลหรือเยื่อบุผิวหนัง</td>
+</tr>
+<tr><td>click</td><td>//div[@id='app']/div/div/div[2]/div[2]/div/div/div/div/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div[2]/div/div/div/div/div/div/div</option><option>//div[2]/div[2]/div/div/div/div/div/div/div</option><option>css=div.v-input.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.teal--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=กรุงเทพมหานคร-list-item-86<datalist><option>id=กรุงเทพมหานคร-list-item-86</option><option>//div[@id='กรุงเทพมหานคร-list-item-86']</option><option>xpath=(//div[@id='list-24']/div/div/div)[2]</option><option>//div/div/div/div/div/div/div</option><option>css=#กรุงเทพมหานคร-list-item-86</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='app']/div/div/div[2]/div[2]/div/div/div/div/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div[2]/div/div/div/div/div/div/div</option><option>//div[2]/div[2]/div/div/div/div/div/div/div</option><option>css=div.v-input.v-input--is-label-active.v-input--is-dirty.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.teal--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option></datalist></td><td>กรุงเทพมหานคร</td>
+</tr>
+<tr><td>click</td><td>id=input-32<datalist><option>id=input-32</option><option>//input[@id='input-32']</option><option>//div[@id='app']/div/div/div[2]/div[2]/div/div[2]/div/div/div/div/input</option><option>//div[2]/div/div[2]/div/div/div/div/input</option><option>css=#input-32</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=input-32<datalist><option>id=input-32</option><option>//input[@id='input-32']</option><option>//div[@id='app']/div/div/div[2]/div[2]/div/div[2]/div/div/div/div/input</option><option>//div[2]/div/div[2]/div/div/div/div/input</option><option>css=#input-32</option></datalist></td><td>1</td>
+</tr>
+<tr><td>assertValue</td><td>id=input-32<datalist><option>id=input-32</option><option>//input[@id='input-32']</option><option>//div[@id='app']/div/div/div[2]/div[2]/div/div[2]/div/div/div/div/input</option><option>//div[2]/div/div[2]/div/div/div/div/input</option><option>css=#input-32</option></datalist></td><td>1</td>
+</tr>
+<tr><td>click</td><td>//div[@id='app']/div/div/div[2]/div[3]/div/button/span<datalist><option>//div[@id='app']/div/div/div[2]/div[3]/div/button/span</option><option>//button/span</option><option>css=span.v-btn__content</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='app']/div/div/div[2]/div[4]/div/div/div<datalist><option>//div[@id='app']/div/div/div[2]/div[4]/div/div/div</option><option>//div[2]/div[4]/div/div/div</option><option>css=div.v-alert__content</option></datalist></td><td>บันทึกข้อมูลไม่สำเร็จ</td>
 </tr>
 </tbody></table>
 </body>
